--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
                 <ul>
                     <li>- <abbr title="1 em 2 milhões">Lagosta Azul</abbr></li>                    
                     <img src="lagosta azul.jpeg" alt="raras">                    
-                    <li>- <abbr title="1 em 30 milhões">Lagosta laranja</abbr></li>
+                    <li><abbr title="1 em 30 milhões">Lagosta laranja</abbr></li>
                     <img src="lagosta laranja.jpeg" alt="raras">
-                    <li>- <abbr title="1 em 50 milhões">Lagosta Bicolor</abbr></li>
+                    <li><abbr title="1 em 50 milhões">Lagosta Bicolor</abbr></li>
                     <img src="bicolor.jpeg" alt="raras">
-                    <li>- <abbr title="1 em 100 milhões">Lagosta Albina</abbr></li>
+                    <li><abbr title="1 em 100 milhões">Lagosta Albina</abbr></li>
                     <img src="lagosta albina.jpeg" alt="raras">
                 </ul>
             </aside>
