--- a/index.html
+++ b/index.html
@@ -92,6 +92,8 @@ header h1 {
 }
 
 header p {
+  color: aqua;
+  font-weight: bold;
   font-size: 1.5rem;
   font-style: oblique;  
   max-width: 98vw;
@@ -161,6 +163,7 @@ article h1, article h2, article h3, article h4 {
   color: rgb(4, 65, 4);
   margin-top: 5px;
   margin-bottom: 10px;
+  margin-left: 10px;
   animation: fadeInUp var(--duracao) var(--ease);
 }
 article h1 {
@@ -178,7 +181,7 @@ article h4 {
 p {
   color: #7a0f0f;
   margin-bottom: 20px;
-  margin-left: 10px;  
+  margin-left: 20px;  
   animation: fadeIn var(--duracao) var(--ease);
   font-size: 1.5em;
 }
@@ -221,7 +224,7 @@ aside {
   background: #e0f2f1;
   border-left: 5px solid var(--cor-secundaria);
   padding: 20px;
-  margin: 30px 0;
+  margin:20px 0px;
   border-radius: var(--radius);
   box-shadow: var(--sombra);
   animation: fadeInUp var(--duracao) var(--ease);
